# barebones_3d_render_engine

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: main.cpp
test/: CMakeLists.txt
test/source/: barebones_3d_render_engine_test.cpp
